--- a/All/Home/index.html
+++ b/All/Home/index.html
@@ -10,8 +10,26 @@
 <body>
 
     <div id="navbar-container"></div>
+    <div class="container-perfil">
+        <img src="/Assets/imgs/img perfil.jfif" id="img-perfil">
+    </div>
+    <p id="p1">Bem-Vindo(a),Visitante!&#128075</p>
+    <p id="p2">Desenvolvedor Back-End.</p>
+    <div id="contact-container">
+        <div id="line"></div>
+        <a href="https://www.linkedin.com/in/nicolas-barreira/">
+            <img src="/Assets/imgs/icon-linkedin.png" id="Linkedin">
+        </a>
+        <a href="https://github.com/NicBarreira">
+            <img src="/Assets/imgs/icon-github.png" id="GitHub">
+        </a>
+        <a href="mailto:nbarreira252@gmail.com" target="_blank">
+            <img src="/Assets/imgs/icon-gmail.png" id="Gmail">
+        </a>
+    <div id="line"></div>
+    </div>
 
-    <h1>aaaa</h1>
+
     <script src="navbar-loader.js"></script>
     <script src="script.js"></script>
 </body>
