Page to projects

--- a/All/Home/index.html
+++ b/All/Home/index.html
@@ -10,10 +10,9 @@
 <body>
 
     <div id="navbar-container"></div>
-    <div class="container-perfil">
-        <img src="/Assets/imgs/img perfil.jfif" id="img-perfil">
-    </div>
-    <p id="p1">Bem-Vindo(a),Visitante!&#128075</p>
+    
+    <p id="p1">Bem-Vindo(a), Visitante!&#128075</p>
+    <p id="p1"> Nicolas Freitas</p>
     <p id="p2">Desenvolvedor Back-End.</p>
     <div id="contact-container">
         <div id="line"></div>
