--- a/All/Contact/index.html
+++ b/All/Contact/index.html
@@ -10,8 +10,20 @@
 <body>
 
     <div id="navbar-container"></div>
+    
+    <div id="contact">
+        <h1>Entre em Contato</h1>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required>
 
-    <h1>aaaa</h1>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="mensagem">Mensagem:</label>
+        <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+
+        <button type="submit" id="button-submit">Enviar</button>
+    </div>
     <script src="navbar-loader.js"></script>
     <script src="script.js"></script>
 </body>
