--- a/All/About/index.html
+++ b/All/About/index.html
@@ -12,14 +12,18 @@
 
     <div id="navbar-container"></div>
 
-    <img src="/Assets/imgs/img perfil.jfif" id="img-perfil">
+    <img src="/Portfolio/Assets/imgs/img perfil.jfif" id="img-perfil">
     <h1> Nicolas Barreira Freitas</h1>
     
-    <p>  
+    <p id="about">  
         Olá, seja bem-vindo(a) sou o Nicolas Barreira Freitas!
         Tenho 19 anos e sou técnico em Automação Industrial. Atualmente, estou cursando o Bacharelado em Ciência da Computação na Fundação Santo André (FSA). Desde sempre, sou apaixonado por tecnologia e, ao longo dos anos, venho me aprofundando em diversas áreas desse vasto universo, com foco em ser desenvolvedor back-end.
         Este é meu primeiro portfólio, criado utilizando HTML, CSS e JavaScript, ferramentas que me permitem expressar minha criatividade e ampliar meus conhecimentos na área de programação. Aqui, você encontrará projetos que refletem meu aprendizado e minha evolução como desenvolvedor.
-        Estou sempre em busca de novos desafios, aperfeiçoamento contínuo e oportunidades para aplicar minhas habilidades em soluções inovadoras. Se você está interessado em saber mais sobre meu trabalho ou em colaborar em algum projeto. Clique no Link a baixo:</p>
+        Estou sempre em busca de novos desafios, aperfeiçoamento contínuo e oportunidades para aplicar minhas habilidades em soluções inovadoras. Se você está interessado entre em contado no botão abaixo.</p>
+
+        <p id="saiba-mais">
+            saiba mais:
+        </p>
 
         <a href='/All/Contact/index.html' id="btn-contact">Contato</a>
 
