--- a/All/Home/index.html
+++ b/All/Home/index.html
@@ -17,13 +17,13 @@
     <div id="contact-container">
         <div id="line"></div>
         <a href="https://www.linkedin.com/in/nicolas-barreira/">
-            <img src="/Assets/imgs/icon-linkedin.png" id="Linkedin">
+            <img src="/Portfolio/Assets/imgs/icons/icon-linkedin.png" id="Linkedin">
         </a>
         <a href="https://github.com/NicBarreira">
-            <img src="/Assets/imgs/icon-github.png" id="GitHub">
+            <img src="/Portfolio/Assets/imgs/icons/icon-github.png" id="GitHub">
         </a>
         <a href="mailto:nbarreira252@gmail.com" target="_blank">
-            <img src="/Assets/imgs/icon-gmail.png" id="Gmail">
+            <img src="/Portfolio/Assets/imgs/icons/icon-gmail.png" id="Gmail">
         </a>
     <div id="line"></div>
     </div>
