--- a/All/Navbar/index.html
+++ b/All/Navbar/index.html
@@ -10,10 +10,10 @@
     <div class="Navbar">
         <div class="logo">Nicolas Freitas</div>
         <ul>
-            <li><a href="/All/Home/index.html">Home</a></li>
-            <li><a href="/All/Projects/">view projects</a></li>
-            <li><a href="/All/About/index.html">About</a></li>
-            <li><a href="/All/Contact/">Contact</a></li>
+            <li><a href="/Portfolio/All/Home/index.html">Home</a></li>
+            <li><a href="/Portfolio/All/Projects/index.html">view projects</a></li>
+            <li><a href="/Portfolio/All/About/index.html">About</a></li>
+            <li><a href="/Portfolio/All/Contact/index.html">Contact</a></li>
         </ul>
     </div>
 </body>
