--- a/All/Projects/index.html
+++ b/All/Projects/index.html
@@ -14,13 +14,15 @@
         <h2>Meus Projetos</h2>
         <div class="projects-container">
             <div class="project-card">
-                <img src="projeto1.png" alt="Projeto 1">
+                <img src="/Portfolio/Assets/imgs/Projects/Portifolio.png" alt="Projeto 1">
                 <h3>Projeto 1</h3>
-                <p>Descrição breve do projeto.</p>
+                <p>Portifólio de apresentção.</p>
                 <div class="tags">
-                    <span>linguagem</span><span>linguagem</span><span>linguagem</span>
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
                 </div>
-                <a href="#" class="btn">Ver mais</a>
+                <a href="/Portfolio/All/Home/index.html" class="btn">Ver mais</a>
             </div>
     
             <div class="project-card">
